[package]
name = "a_star_wallpaper"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
argh = "0.1.12"
bevy = "0.11.3"
bevy_tweening = "0.8"
enquote = "1.1.0"
futures = "0.3.28"
image = "0.24.7"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tempfile = "3.8.1"
tokio = { version = "1.33.0", features = ["full"] }